added POST review feature (still need to add GET reviews)

--- a/src/components/resource/resource.styles.css
+++ b/src/components/resource/resource.styles.css
@@ -1,3 +1,14 @@
 .resource-box{
-    border: solid black 1px
+    border: solid black 1px;
+}
+
+.layer{
+        height: 600px;
+        width: 1450px;
+        margin-left: -80px;
+        margin-top: -80px;
+        position: absolute;
+        z-index: 10;
+        opacity: 0;
+        background-color: black
 }
