added super basic styling and fixed search feature

--- a/src/pages/admin-resource.styles.css
+++ b/src/pages/admin-resource.styles.css
@@ -1,8 +1,4 @@
-.login{
+.admin{
     background-image: linear-gradient(rgb(109, 109, 233), white);
     height: 100%;
-}
-
-.login-form{
-    margin-top: 5%
 }
