--- a/src/pages/about-page/about-page.styles.css
+++ b/src/pages/about-page/about-page.styles.css
@@ -1,8 +1,5 @@
 .about{
     background-image: linear-gradient(rgb(109, 109, 233), white);
     height: 100%;
-}
-
-.about p{
-    margin-top: 5%
+    padding-top: 5%
 }
