--- a/src/pages/register-page/register-page.styles.css
+++ b/src/pages/register-page/register-page.styles.css
@@ -1,8 +1,5 @@
 .register{
     background-image: linear-gradient(rgb(109, 109, 233), white);
     height: 100%;
-}
-
-.register-form{
-    margin-top: 5%
+    padding-top: 5%
 }
