--- a/src/pages/login-page/login-page.styles.css
+++ b/src/pages/login-page/login-page.styles.css
@@ -1,8 +1,5 @@
 .login{
     background-image: linear-gradient(rgb(109, 109, 233), white);
     height: 100%;
-}
-
-.login-form{
-    margin-top: 5%
+    padding-top: 5%
 }
