--- a/src/pages/main-page/main-page.styles.css
+++ b/src/pages/main-page/main-page.styles.css
@@ -1,8 +1,5 @@
 .main{
     background-image: linear-gradient(rgb(109, 109, 233), white);
     height: 100%;
-}
-
-.main h1{
-    margin-top: 5%
+    padding-top: 5%
 }
