--- a/src/pages/profile-page/profile-page.styles.css
+++ b/src/pages/profile-page/profile-page.styles.css
@@ -1,8 +1,5 @@
 .profile{
     background-image: linear-gradient(rgb(109, 109, 233), white);
     height: 100%;
-}
-
-.section{
-    margin-top: 5%
+    padding-top: 5%
 }
