--- a/src/components/button/button.styles.css
+++ b/src/components/button/button.styles.css
@@ -1,16 +1,15 @@
 .custom-button{
-    width: 90px;
+    width: 100%;
     height: 28px;
     cursor: pointer;
     border: none;
     transition-duration: .8s;
-    float: right;
     color: white;
     opacity: 1;
     border-radius: 20px;
     margin: 5%;
+    float: center;
     background-color: rgb(24, 24, 116);
-    margin-left: -2%
 }   
 
 
@@ -25,6 +24,6 @@
 .button_name{
     font-size: 11px;
     position: static;
-    margin-top: 6px;
+    margin-top: 26px;
     left: 28px
 }
