--- a/src/components/resource-list/resource-list.styles.css
+++ b/src/components/resource-list/resource-list.styles.css
@@ -4,5 +4,6 @@
     width: 100%;
     height: 100%;
     position: relative;
-    align-items: stretch
+    align-items: stretch;
+    overflow: hidden;
 }
