--- a/src/pages/login-page/login-page.styles.css
+++ b/src/pages/login-page/login-page.styles.css
@@ -3,3 +3,10 @@
     height: 100%;
     padding-top: 5%
 }
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    margin-left: 30%;
+    margin-right: 30%;
+}
