--- a/src/components/resource/resource.styles.css
+++ b/src/components/resource/resource.styles.css
@@ -9,6 +9,7 @@
     cursor: pointer;
     transition-duration: 1s;
     min-width: auto;
+    font-family: 'Prata', serif;
 }
 
 .resource-box:hover{
@@ -25,6 +26,7 @@
 
 .resource-right ul{
     text-align: justify;
+    list-style-type: square;
 }
 
 .resource-left img{
