--- a/src/pages/register-page/register-page.styles.css
+++ b/src/pages/register-page/register-page.styles.css
@@ -3,3 +3,10 @@
     height: 100%;
     padding-top: 5%
 }
+
+.register-form{
+    display: flex;
+    flex-direction: column;
+    margin-left: 30%;
+    margin-right: 30%;
+}
