--- a/src/components/resources/resource/resource.styles.css
+++ b/src/components/resources/resource/resource.styles.css
@@ -5,12 +5,12 @@
     grid-template-columns: 50% 50%;
     margin: 20px;
     flex: 1 1 38%;
-    max-width: 38%;
     padding: 3%;
     cursor: pointer;
     transition-duration: 1s;
     min-width: auto;
     font-family: 'Prata', serif;
+    position: none;
 }
 
 .resource-box:hover{
