--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,7 @@
   text-align: center;
   font-family: 'Prata', serif;
   font-weight: bold;
+  background-image: linear-gradient(rgb(109, 109, 233), white);
+  height: 100%;
+  padding-top: 5%
 }
