--- a/src/pages/resource-page/resource-page.styles.css
+++ b/src/pages/resource-page/resource-page.styles.css
@@ -1,5 +1,3 @@
-.resource-page{
-    height: 100%;
-    background-image: linear-gradient(rgb(109, 109, 233), white);
-    padding-top: 5%
-};
+.resource_page{
+    height: 3600px
+}
