added some formatting and started setting up some new features

--- a/src/components/resources/resource/resource.styles.css
+++ b/src/components/resources/resource/resource.styles.css
@@ -9,6 +9,7 @@
     cursor: pointer;
     transition-duration: 1s;
     min-width: auto;
+    max-width: 550px;
     font-family: 'Prata', serif;
     position: none;
 }
