--- a/src/components/detail/detail.styles.css
+++ b/src/components/detail/detail.styles.css
@@ -9,23 +9,25 @@
     display: flex;
     flex-direction: column;
     padding-left: 3%;
-    width: 50%
+    flex: 1 1 38%;
+    max-width: auto
 }
 
 .left-detail h3{
     font-size: 8vh;
-    width: 50%;
 }
 
 .left-detail img{
-    border-radius: 50%;
-    height: 50%;
-    width: 50%;
+    border-radius: 0%;
 }
 
 .right-detail{
-    font-size: 5vh;
+    font-size: 3vh;
     text-align: left;
+    flex: 1 1 38%;
+    max-width: auto
+}
+
+.right-detail li{
     list-style-type: square;
-    width: auto;
 }
