--- a/src/components/resources/resource/resource.styles.css
+++ b/src/components/resources/resource/resource.styles.css
@@ -11,7 +11,8 @@
     min-width: auto;
     max-width: 550px;
     font-family: 'Prata', serif;
-    position: none;
+    position: relative;
+    z-index: 0;
 }
 
 .resource-box:hover{
