--- a/src/pages/profile-page/profile-page.styles.css
+++ b/src/pages/profile-page/profile-page.styles.css
@@ -1,4 +1,38 @@
+.profile{
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    align-items: stretch;
+    padding: 3%
+}
+
+.profile h1{
+    width: 100%;
+}
+
 .profile h2{
     text-align: left;
     margin-left: 20px;
+}
+
+.profile-likes{
+    width: 50%;
+    max-width: 550px;
+    position: relative;
+    text-align: left;
+    min-width: 400px
+}
+
+.profile-likes h3{
+    text-align: left;
+    margin-top: 3%;
+}
+
+.profile-resource{
+    width: 50%;
+    max-width: auto;
+    position: relative;
+    min-width: 400px
 }
