--- a/src/components/delete-detail/delete-detail.styles.css
+++ b/src/components/delete-detail/delete-detail.styles.css
@@ -1,13 +1,14 @@
-.detail-add__symbol{
-    color: rgb(76, 76, 212);
+.detail-delete__symbol{
+    color: red;
     cursor: pointer;
     font-size: 15px;
+    width: 10px;
     -moz-user-select: none;
     -webkit-user-select: none;
     user-select: none;
 }
 
-.detail-add__symbol.active{
-    background-color: rgb(76, 76, 212);
+.detail-delete__symbol.active{
+    background-color: red;
     color: white;
 }
