--- a/src/components/detail/detail.styles.css
+++ b/src/components/detail/detail.styles.css
@@ -1,3 +1,24 @@
+@media screen and (max-width: 695px) {
+    .detail-reviews {
+      display: block;
+      float: left
+    }
+  }
+
+  @media screen and (min-width: 695px) {
+    .detail-reviews {
+      display: flex
+    }
+  }
+
+.detail-dynamic{
+    display: flex;
+    flex-flow: column wrap;
+    text-align: left;
+    width: 100%;
+    cursor: none
+}
+
 .resource-detail{
     width: 100%;
     height: 100vh;
@@ -39,13 +60,25 @@
     position: absolute;
     z-index: 10;
     opacity: 0;
-    cursor: pointer;
 }
 
 .detail-reviews{
     width: 100%;
     height: auto;
-    display: flex;
     flex-flow: row wrap;
     justify-content: left;
+    padding: 3%;
+}
+
+.fa.fa-thumbs-o-up{
+    transition-duration: .6s;
+    cursor: pointer
+}
+
+.fa.fa-thumbs-o-up.active{
+    color: rgb(24, 24, 116)
+}
+
+.detail-service{
+    padding: 3%
 }
