--- a/src/pages/profile-page/profile-page.styles.css
+++ b/src/pages/profile-page/profile-page.styles.css
@@ -1,15 +1,16 @@
 .profile{
     display: flex;
     flex-flow: row wrap;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     position: relative;
     align-items: stretch;
-    padding: 3%
+    padding: 3%;
+    overflow-x: hidden;
 }
 
 .profile h1{
-    width: 100%;
+    width: 80%
 }
 
 .profile h2{
@@ -22,7 +23,8 @@
     max-width: 550px;
     position: relative;
     text-align: left;
-    min-width: 400px
+    min-width: 325px;
+    border-bottom: solid black 1px;
 }
 
 .profile-likes h3{
@@ -34,7 +36,7 @@
     width: 50%;
     max-width: auto;
     position: relative;
-    min-width: 400px;
+    min-width: 300px;
 }
 
 .profile-section p:first-child{
