--- a/src/components/services-all/services-all.styles.css
+++ b/src/components/services-all/services-all.styles.css
@@ -36,8 +36,22 @@
     font-family: 'Prata', serif;
 }
 
+.filter-drop::-webkit-scrollbar {
+    width: 0em;
+  }
+   
+  .filter-drop::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  .filter-drop::-webkit-scrollbar-thumb {
+    background-color: rgb(38, 38, 109);
+    outline: 1px solid slategrey;
+  }
+
 .filter-drop.active{
-    max-height: 240px;
+    max-height: 280px;
+    overflow-y: scroll;
 }
 
 .filter-drop.active__add{
