--- a/src/components/resources/resource/resource.styles.css
+++ b/src/components/resources/resource/resource.styles.css
@@ -30,6 +30,7 @@
 .resource-right ul{
     text-align: left;
     list-style-type: square;
+    font-size: 12px;
 }
 
 .resource-left img{
@@ -42,6 +43,7 @@
 
 .resource-right{
     padding: 5%;
+
 }
 
 .resource-right__anchor{
