--- a/src/components/navigation/navbar/navbar.styles.css
+++ b/src/components/navigation/navbar/navbar.styles.css
@@ -27,22 +27,21 @@
     min-width: 0px;
 }
 
-.block{
+.nav-hamburger{
     position: fixed;
     z-index: 50;
     transition-duration: 1.5s;
     width: auto;
-    height: 30px;
-    margin-top: 1%;
-    margin-left: 1%;
-    cursor: pointer
+    height: 35px;
+    cursor: pointer;
+    padding: 2%
   }
 
 .line{
     border-radius: 20%;
     margin-top: 0px;
-    width: 30px;
-    height: 5px;
+    width: 35px;
+    height: 7px;
     background-color: rgb(76, 76, 212);
     transition-duration: .6s;
 }
@@ -57,8 +56,8 @@
 .line1{
     border-radius: 20%;
     margin-top: 5px;
-    width: 30px;
-    height: 5px;
+    width: 35px;
+    height: 7px;
     background-color: rgb(76, 76, 212);
     transition-duration: .6s;
 }
