--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@
   text-align: center;
   font-family: 'Prata', serif;
   font-weight: bold;
-  background-color: #F8F8FF;
   height: 100%;
   padding-top: 5%;
   width: 100%;
+  position: relative;
+  padding-bottom: 15vh;
+  min-height: 100%
 }
