--- a/src/components/detail/detail.styles.css
+++ b/src/components/detail/detail.styles.css
@@ -35,10 +35,8 @@
 
 .resource-detail{
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-flow: row wrap;
-
 }
 
 .left-detail{
@@ -58,10 +56,10 @@
 }
 
 .right-detail{
-    font-size: 3vh;
+    font-size: 2.5vh;
     text-align: left;
-    max-width: auto;
-    padding: 3%
+    max-width: 100%;
+    padding-right: 6%
 }
 
 .right-detail li{
