--- a/src/components/loading-icon/loading.styles.css
+++ b/src/components/loading-icon/loading.styles.css
@@ -36,8 +36,9 @@
   }
 
 .loading-screen{
-    height: 100%;
-    width: 100%;
+    height: 100vw;
+    width: 100vw;
+    padding-bottom: 65vw;
     background-color: #F8F8FF;
 }
 
