--- a/src/pages/register-page/register-page.styles.css
+++ b/src/pages/register-page/register-page.styles.css
@@ -1,10 +1,28 @@
+@media screen and (min-width: 600px) {
+    .register-form{
+        display: flex;
+        flex-direction: column;
+        margin-left: 30%;
+        margin-right: 30%;
+    }
+}
 
+@media screen and (max-width: 600px) {
+    .register-form{
+        display: flex;
+        flex-direction: column;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+
+.register{
+    min-height: 100vh;
+}
 
 .register-form{
     display: flex;
     flex-direction: column;
-    margin-left: 30%;
-    margin-right: 30%;
 }
 
 .register-warning{
