--- a/src/components/navigation/navbar/navbar.styles.css
+++ b/src/components/navigation/navbar/navbar.styles.css
@@ -5,11 +5,11 @@
     justify-content: space-between;
     width: 0%;
     position: fixed;
+    box-shadow: 0 10px 13px #777;
     z-index: 35;
     background-color: rgb(117, 204, 153);
     height: 85%;
     margin: 0;
-    opacity: 1;
     transition-duration: .3s;
     overflow: hidden;
     padding: 0vh;
@@ -56,22 +56,13 @@
     background-color: rgb(76, 76, 212);
 }
 
-.line1{
-    border-radius: 20%;
+.line.bel{
     margin-top: 5px;
-    width: 35px;
-    height: 7px;
-    background-color: rgb(76, 76, 212);
-    transition-duration: .6s;
 }
 
-.line1.active{
+.line.bel.active{
     transform: translate(0px, -30px);
-    border-radius: 50%;
     margin-top: 0px;
-    height: 30px;
-    width: 30px;
-    background-color: rgb(76, 76, 212);
 }
 
 .nav-login{
