--- a/src/components/resources/resource/resource.styles.css
+++ b/src/components/resources/resource/resource.styles.css
@@ -1,10 +1,22 @@
+@media screen and (max-width: 300px) {
+    .resource-box{
+        margin: 2vh;
+        border: solid  rgb(117, 204, 153) 2px;
+    }
+}
+
+@media screen and (min-width: 300px) {
+    .resource-box{
+        border: solid  rgb(117, 204, 153) 3px;
+        margin: 20px;
+    }
+}
+
 .resource-box{
-    border: solid  rgb(117, 204, 153) 5px;
     box-shadow: none;
     display: grid;
     grid-template-columns: 50% 50%;
-    margin: 20px;
-    flex: 1 1 38%;
+    flex: 1 1 37%;
     padding: 3%;
     transition-duration: 1s;
     min-width: auto;
