--- a/src/components/loading-icon/loading.styles.css
+++ b/src/components/loading-icon/loading.styles.css
@@ -42,9 +42,15 @@
     background-color: #F8F8FF;
 }
 
+.loading-screen p{
+    font-size: 8vh;
+    padding: 0;
+    margin: 0
+}
+
 .loading{
     position: fixed;
-    top: 50%;
+    top: 40%;
     left: 50%;
     width: 80px;
     height: 80px;
