--- a/src/components/review/review-box/review-box.styles.css
+++ b/src/components/review/review-box/review-box.styles.css
@@ -10,17 +10,19 @@
     top: 20%;
     transform: translate(-50%, -20%);
     overflow-y: scroll;
+    text-align: left;
 }
 
-.review-box p:first-child{
+.review-box h3{
     cursor: pointer;
     opacity: .4;
     position: absolute;
     left: 7%;
     top: 2%;
+    user-select: none;
 }
 
-.review-box p:first-child:hover{
+.review-box h3:hover{
     opacity: 1
 }
 
