--- a/src/components/resources/resource-detail/resource-detail.styles.css
+++ b/src/components/resources/resource-detail/resource-detail.styles.css
@@ -27,7 +27,7 @@
         flex: 1 1 44%;
     }
     .left-detail h3{
-        font-size: 6vh;
+        font-size: 5vh;
     }
   }
 
@@ -43,6 +43,7 @@
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    align-items: flex-start;
 }
 
 .left-detail{
@@ -54,13 +55,15 @@
 
 .left-detail img{
     border-radius: 0%;
+    margin: auto
 }
 
 .right-detail{
     font-size: 2.5vh;
     text-align: left;
     max-width: 100%;
-    padding-right: 6%
+    padding-right: 6%;
+    padding-top: 6%
 }
 
 .right-detail li{
